--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "intl": "^1.2.5",
     "react": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
