--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "styled-components": "^5.3.5",
+    "victory-native": "^34.3.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
