--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^5.x",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~4.0.3",
     "expo-font": "~11.1.1",
+    "expo-random": "~13.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "intl": "^1.2.5",
@@ -40,6 +44,7 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.1",
     "@types/styled-components-react-native": "^5.1.3",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
