--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true
+    "strict": true, 
+    "types": ["react", "react-native", "@react-navigation/native"]
   },
   "extends": "expo/tsconfig.base"
 }
